[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Game.gd" type="Script" id=2]
[ext_resource path="res://UI/GameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/CurrentLevel.gd" type="Script" id=4]
[ext_resource path="res://UI/LevelDone.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Tutorial.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D" groups=[
"Game",
]]
script = ExtResource( 2 )

[node name="CurrentLevel" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Level1" parent="CurrentLevel" instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOver" parent="UI" instance=ExtResource( 3 )]
visible = false

[node name="LevelDone" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="Tutorial" parent="UI" instance=ExtResource( 6 )]
visible = false
